# gitstyle

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: demo.sh  demo.tape  gitstyle-wrapper
docs/: agent-integration.md  architecture.md  configuration.md  faq.md  getting-started.md  incremental.md  index.md  output-format.md  pipeline.md  web-viewer.md
examples/anthropic/: code-structure.md  comments-and-docs.md  commit-hygiene.md  dependencies.md  index.md  naming-conventions.md  patterns.md  testing.md  type-discipline.md
examples/anthropic/_meta/: generation-config.md  log.md  sources.md
examples/anthropic/languages/: python.md  typescript.md
examples/anthropics/: code-structure.md  comments-and-docs.md  commit-hygiene.md  dependencies.md  index.md  language-idioms.md  naming-conventions.md  patterns.md  testing.md  type-discipline.md
examples/anthropics/_meta/: generation-config.md  log.md  sources.md
examples/anthropics/languages/: bash.md  c.md  css.md  dockerfile.md  go.md  html.md  javascript.md  jupyter-notebook.md  kotlin.md  powershell.md  python.md  ruby.md  rust.md  shell.md  typescript.md  yaml.md
examples/edgarpavlovsky/: code-structure.md  comments-and-docs.md  commit-hygiene.md  dependencies.md  index.md  naming-conventions.md  patterns.md  testing.md  type-discipline.md
examples/edgarpavlovsky/_meta/: generation-config.md  log.md  sources.md
examples/edgarpavlovsky/languages/: swift.md  typescript.md
examples/karpathy/: code-structure.md  comments-and-docs.md  commit-hygiene.md  dependencies.md  index.md  language-idioms.md  naming-conventions.md  patterns.md  testing.md  type-discipline.md
examples/openai/: code-structure.md  comments-and-docs.md  commit-hygiene.md  dependencies.md  index.md  language-idioms.md  naming-conventions.md  patterns.md  testing.md  type-discipline.md
examples/openai/_meta/: log.md  (+2 more)
examples/torvalds/: code-structure.md  comments-and-docs.md  commit-hygiene.md  dependencies.md  index.md  language-idioms.md  naming-conventions.md  patterns.md  testing.md  type-discipline.md
src/gitstyle/: __init__.py  cli.py  compile.py  config.py  extract.py  fetch.py  github_client.py  lint.py  llm_client.py  models.py  sample.py  serve.py  viewer.html  wiki_writer.py
tests/: test_bugfixes.py  test_cli.py  test_compile.py  test_config.py  test_extract.py  test_incremental.py  test_models.py  test_qa_additional.py  test_sample.py  test_serve.py  test_serve_qa.py  test_v032_qa.py  test_wiki_writer.py
wiki/: commit-hygiene.md  index.md  patterns.md  type-discipline.md
wiki/_meta/: generation-config.md  log.md
wiki/languages/: c.md
(+56 files in other folders)
