[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitstyle"
version = "0.1.0"
description = "Generate a personal engineering style wiki from your GitHub commit history"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Edgar Pavlovsky" },
]
keywords = ["github", "coding-style", "wiki", "llm", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "anthropic>=0.39.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
]

[project.scripts]
gitstyle = "gitstyle.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gitstyle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
