[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitstyle"
version = "0.3.3"
description = "Analyze a developer's GitHub commit history and compile it into a personal engineering style wiki."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Edgar Pavlovsky" }]
keywords = ["github", "engineering", "style", "wiki", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "anthropic>=0.39.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.21.0",
]

[project.scripts]
gitstyle = "gitstyle.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gitstyle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
